--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,25 @@
+body {
+    margin: 0;
+    font-family: "Inter", sans-serif;
+    overflow-y: auto;
+    height: 100vh;
+    background-color: #FFFFFF;
+    max-width: 1440px;
+    max-height: 696px;
+}
 
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin: 0;
+}
