--- a/src/components/CatalogSideBar/CatalogSideBar.module.css
+++ b/src/components/CatalogSideBar/CatalogSideBar.module.css
@@ -1,14 +1,15 @@
 .filtersEq ul {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    display: flex;
+    flex-wrap: wrap;
     gap: 10px;
     list-style: none;
     padding-left: 70px;
+    margin: 0;
 }
 
-.filtersEq ul li:nth-child(4),
-.filtersEq ul li:nth-child(5) {
-    grid-column: span 1;
+.filtersEq ul li:nth-last-child(2),
+.filtersEq ul li:nth-last-child(1) {
+    flex: 1 1 calc(50% - 5px);
 }
 
 .filtersTitle {
