--- a/src/components/TruckCard/TruckCard.module.css
+++ b/src/components/TruckCard/TruckCard.module.css
@@ -96,6 +96,11 @@
 }
 
 .truckDescr {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0%;
+    color: #475467;
     position: absolute;
     top: 110px;
     left: 330px;
